# keithley_6517B_controller

./: .gitignore  README.md  conditions.txt  pyproject.toml  s_D2_FET_1_20241225_01_13_39.txt  s_D2_FET_3_20241225_01_21_49.txt  s_D2_FET_4_20241225_01_25_05.txt  s_D2_NiNTA0ug_2_20241225_01_45_25.txt  s_D2_NiNTA10ug_2_20241225_02_03_57.txt  s_D2_NiNTA10ug_3_20241225_02_33_48.txt  s_D2_fet_1_20241228_21_17_55.txt  s_D2_fet_2_20241228_21_20_20.txt  s_D2_fet_3_20241228_21_22_40.txt  tmp.txt
20241228/: s_D2_pat_peg_0uM_dirty_sample2_2_20241228_19_26_07.txt  s_D2_pat_peg_0uM_dirty_sample3_1_20241228_19_40_32.txt  s_D2_pat_peg_1uM_dirty_sample2_2_20241228_20_04_32.txt  s_D2_pat_peg_1uM_dirty_sample2_3_20241228_20_07_51.txt  test20241228_22_23_07.txt  test20241228_22_34_24.txt
data/: c_A11_rna_0um_sample1_20241230_06_17_51.txt  c_C16_fet_20241230_02_47_32.txt  c_C16_rna_0um_sample1_20241230_05_58_05.txt  c_F8_rna_0um_sample1_20241230_06_26_03.txt  c_F8_rna_0um_sample1_20241230_06_27_45.txt  c_F8_rna_0um_sample1_again_20241230_06_50_16.txt  c_F8_rna_0um_sample1_again_20241230_06_58_38.txt  c_F8_rna_0um_sample1_again_20241230_07_02_07.txt  c_F8_rna_0um_sample2_20241230_06_35_49.txt  c_F8_rna_0um_sample2_20241230_06_45_33.txt  s_D2_FET_2_20241225_01_18_14.txt  s_D2_NiNTA0ug_t_20241225_01_39_45.txt  s_D2_pat_au_dirty_1_20241227_02_01_34.txt  s_D2_pat_peg_1uM_dirty_sample2_1_20241228_20_00_35.txt  s_D2_pat_peg_1uM_dirty_sample3_4_20241228_20_27_13.txt  test20241229_20_49_42.txt  test20241230_01_43_39.txt  test20241230_01_49_25.txt  test20241230_02_05_39.txt  (+5 more)
src/: .res.txt  get.py  (+17 more)
(+612 files in other folders)
