[project]
name = "keithley-6517b-controller"
version = "0.1.0"
description = "Scripts to controll Keithley 6517B using SCPI commands"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=24.10.0",
    "datetime>=5.5",
    "gpib-ctypes>=0.3.0",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "psutil>=6.0.0",
    "pytest>=8.3.3",
    "pyvisa-py>=0.7.2",
    "pyvisa>=1.14.1",
    "zeroconf>=0.135.0",
]
